Fix width on small screen for import/export line

--- a/track.css
+++ b/track.css
@@ -230,4 +230,8 @@ a:hover {
     input[type=checkbox] {
         margin-left: 1rem;
     }
+
+    input[type=file] {
+        width: 11.5rem;
+    }
 }
